# landmine-detection

./: CITATION.cff  LICENSE  README.md  flake.nix  pyproject.toml  shell.nix
data/: landmines-cleaned.csv  landmines-resampled.csv  landmines-test.csv  landmines-train.csv
src/: analysis.ipynb  evaluation.ipynb  models.ipynb
