[tool.poetry]
name = "landmines-detection-research"
version = "1.0.0"
description = "Landmines detection research code"
authors = ["Leonid Oliinyk <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.0.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
tensorflow = "^2.18.0"
imblearn = "^0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
